--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "getmybeer",
   "version": "0.1.0",
+  "proxy": "https://api.punkapi.com/v2",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
