--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "axios": "^0.18.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
